--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -66,7 +66,7 @@ body{
   /*----------------carrusel principal------------------*/
 
   .main-carousel img{
-    height: 480px;
+    height: 100vh;
     object-fit: cover;
   }
   /*---------------------------------------------------*/
@@ -114,8 +114,8 @@ body{
  
   .nueva-mercancia-flex{
     gap:3em;
-    margin: 3em auto;
-    padding-bottom: 5.5em;
+    margin: 3em auto 0 auto;
+    padding-bottom: 6em;
   }
 
   @media (max-width:360px){
@@ -187,11 +187,301 @@ body{
   .fade-in-section {
     opacity: 0;
     transform: scale(0.94);
-    transition: 0.3s ease-in-out all;
-    
+    transition: 0.3s ease-in-out all; 
   }
   .fade-in-section.is-visible {
     opacity: 1;
     transform: scale(1);
   }
 
+
+
+  /*********************************/
+  
+ .text-emprender{
+  width:50%;
+  padding:0;
+  color:var(--main-bg-color);
+  text-shadow: 2px 7px 5px rgba(0,0,0,0.2), 
+    0px -4px 10px rgba(255,255,255,0.2);
+ } 
+
+ .text-emprender h2{
+  margin: auto;
+  font-size: 2.5rem;
+  text-align: center;
+ }
+@media (max-width:992px){
+ .text-emprender h2{
+  font-size: 1.8rem;
+ }
+ .text-emprender h4{
+  font-size: 1.2rem;
+ }
+}
+@media (max-width:768px){
+  .text-emprender h2{
+   font-size: 1.2rem;
+  }
+  .text-emprender h4{
+    font-size: 0.9rem;
+   }
+ }
+
+.video-container{
+  background-image: url('/img/black-linen.png') , url('/img/aprende.jpg');
+  background-size: cover;
+  padding: 2em;
+  margin:3em 0;
+  padding:7em 1em;
+  
+  }
+  
+  .ratio{
+  width:75%;
+   margin: 0 auto;
+  }
+
+ .video-container-animation{
+  animation: myAnim 10s ease-in 0s 1 normal forwards;
+  }
+  @keyframes myAnim {
+    0% {
+      background-size: 90%;
+    }
+  
+    100% {
+      background-size: 100%;
+    }
+  }
+
+  /*------------------------------------------INFO GRID-------------------------------------*/
+.info-grid{
+  margin: 4em 0;
+  }
+  
+  .cols {
+  font-family:Arial, Helvetica, sans-serif;
+  overflow: hidden;
+  height:100%;
+  min-height:400px;
+  }
+  
+  .cols1{
+  background-image: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 80%),url('../img/coro.jpg');
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center bottom;
+  }
+  
+  .cols2{
+  background-image: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 80%),url('../img/maracay2.jpg');
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center bottom;
+  }
+  
+  .cols3{
+  background-image:linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 80%), url('../img/carupano.jpg');
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center bottom;
+  }
+  
+  .btn {border-radius: 0;}
+  
+  .cols h1{
+  font-weight: 900;
+  font-size: 2rem;
+  }
+  
+  .cols h2{
+  margin-top: 9em;
+  text-align: center;
+  font-size: 2rem;
+  line-height: normal;
+  text-shadow: 1px 1px 20px rgba(255, 255, 255, 0.300);
+  }
+  
+  @media (max-width:480px){
+    .cols h2{
+      font-size: 1.5rem;
+    }
+  }
+  
+
+  .container-banner-contact2{
+    background-image: url("../img/postularme.jpg");
+    min-height: 600px;
+    background-attachment: fixed;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position:relative;
+  }
+  
+  
+  #result {
+    padding: 3px;
+  }
+  #result:active{
+    border: 1px solid white;
+  }
+  #result ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  #result ul li {
+    padding: 5px 0;
+  }
+  #result ul li:hover {
+    background: #eee;
+  }
+  
+  .enroll-now{
+    position:absolute;
+    left:150px;
+    top:200px;
+    max-width:320px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  }
+  
+  .enroll-now h2{
+    font-size: 1.2rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+  .enroll-now .btn{
+    border-radius: 0;
+    padding: 0.7em 1em;
+    margin:0 auto;
+    margin-top: 1em;
+  } 
+  
+  
+  @media (max-width: 576px) {
+        .enroll-now{
+            top:50%;
+            left:50%;
+            transform: translate(-50%,-50%);
+        }
+        .enroll-now h2{
+          font-size: 1rem;
+          font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+    }  
+/***********************************************************/
+
+    .footer-32892 {
+      background-color: #202126;
+      padding: 2rem 0;
+      color: #888;
+      font-size: 16px; }
+      .footer-32892, .footer-32892 h3 {
+        font-family: "Poppins", sans-serif; }
+      .footer-32892 h3 {
+        font-size: 20px;
+        color: #fff;
+        margin-bottom: 30px; }
+      .footer-32892 p {
+        font-family: "Source Serif Pro", serif; }
+      .footer-32892 .row.gallery {
+        margin-right: -5px;
+        margin-left: -5px; }
+        .footer-32892 .row.gallery > [class^="col-"],
+        .footer-32892 .row.gallery > [class*=" col-"] {
+          padding-right: 5px;
+          padding-left: 5px; }
+      .footer-32892 .gallery a {
+        display: block;
+        margin-bottom: 10px;
+        -webkit-transition: .3s all ease;
+        -o-transition: .3s all ease;
+        transition: .3s all ease; }
+        .footer-32892 .gallery a:hover {
+          opacity: .5; }
+      .footer-32892 .quick-info li {
+        color: #fff;
+        font-size: 16px;
+        margin-bottom: 10px; }
+        .footer-32892 .quick-info li a {
+          color: #fff; }
+        .footer-32892 .quick-info li .icon {
+          font-size: 20px;
+          color: #B30036; }
+      .footer-32892 .subscribe {
+        position: relative; }
+        .footer-32892 .subscribe .form-control {
+          background-color: #292b31;
+          -webkit-box-shadow: none;
+          box-shadow: none;
+          border-radius: 30px;
+          height: 55px;
+          padding-left: 30px;
+          padding-right: 130px;
+          border: none;
+          color: #fff; }
+          .footer-32892 .subscribe .form-control::-webkit-input-placeholder {
+            color: #ccc;
+            font-size: 14px; }
+          .footer-32892 .subscribe .form-control::-moz-placeholder {
+            color: #ccc;
+            font-size: 14px; }
+          .footer-32892 .subscribe .form-control:-ms-input-placeholder {
+            color: #ccc;
+            font-size: 14px; }
+          .footer-32892 .subscribe .form-control:-moz-placeholder {
+            color: #ccc;
+            font-size: 14px; }
+        .footer-32892 .subscribe .btn-submit {
+          background: #B30036;
+          height: 47px;
+          border-radius: 30px;
+          padding-left: 30px;
+          padding-right: 30px;
+          color: #fff;
+          font-weight: bold;
+          position: absolute;
+          top: 4px;
+          right: 4px;
+          -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2); }
+      .footer-32892 .tweets li {
+        margin-bottom: 20px;
+        font-size: 15px;
+        font-style: italic;
+        font-family: "Source Serif Pro", serif; }
+        .footer-32892 .tweets li span {
+          color: #fff; }
+      .footer-32892 .footer-menu-wrap {
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
+        padding-top: 2rem !important;
+        margin-top: 7rem; }
+      .footer-32892 .footer-menu {
+        margin-bottom: 0; }
+        .footer-32892 .footer-menu li {
+          display: inline-block; }
+          @media (max-width: 767.98px) {
+            .footer-32892 .footer-menu li {
+              display: block; } }
+          .footer-32892 .footer-menu li a {
+            padding: 10px;
+            display: inline-block;
+            color: #fff; }
+            @media (max-width: 767.98px) {
+              .footer-32892 .footer-menu li a {
+                display: block;
+                padding-left: 0px; } }
+          .footer-32892 .footer-menu li:first-child a {
+            padding-left: 0; }
+      .footer-32892 .site-logo {
+        color: #fff;
+        font-size: 20px; }
+    
