--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -9,7 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/map/autocomplete.css">
+    <link rel="stylesheet" href="css/map/autocompleteConfig.css">
+    <link rel="stylesheet" href="css/map/map.css">
+
 </head>
 <body>
     <header>
@@ -17,7 +22,11 @@
         {{> _navbar }}
     </header>
     {{{ body }}}
+
+    {{> _footer }}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-<script src="js/controllerpages.js"></script>
+<script type="module" src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js" integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin="" defer></script>
+<script src="js/autocomplete.js"></script>
+<script type="module" src="js/controllerpages.js"></script>
 </body>
 </html>
