--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <header>
+    <header class="sticky-top">
         {{> _topbanner }}
         {{> _navbar }}
     </header>
