--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -5,7 +5,11 @@
 
 *{
     box-sizing: border-box;
-    font-family: 'Nunito', sans-serif;   
+    font-family: 'Nunito', sans-serif;     
+}
+
+html {
+  overflow-y: scroll !important;
 }
 
 body{
@@ -23,46 +27,7 @@ body{
     text-shadow: 2px 3px 8px #00000063;
   }
 /*---------------navbar------------------------*/
-.container-nav{
-    width: 100%;
-    font-size: 0.8rem;
-    background-color: #eaeaea;
-    box-shadow: rgba(50, 50, 105, 0.111) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
-    z-index: 2;
-  }
 
-.dropdown-menu{
-    font-size: 0.8rem;
-    border-radius: 0;
-    border: 1px solid rgba(239, 236, 236, 0.293);
-    opacity: 0.9;
-    background-color: #eaeaeaa0;
-}
-.navbar{
-    padding:0.2em;
-}
-.navbar-nav{
-    gap:0.6em;
-    margin-left: auto;
-  }
-.navbar img{
-    width:120px;
-  }
-@media (max-width:600px){
-    .navbar img{
-      width:120px;
-    }
-  }
-@media (max-width:380px){
-    .navbar img{
-      width:100px;
-    }
-  }
-@media (max-width:1200px){
-    .navbar-nav{
-      gap:0.50em;
-    }
-  }
   /*----------------carrusel principal------------------*/
 
   .main-carousel img{
@@ -377,6 +342,10 @@ body{
           font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
     }  
+
+    .form-control:focus{
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.25);
+    }
 /***********************************************************/
 
     .footer-32892 {
@@ -484,4 +453,8 @@ body{
       .footer-32892 .site-logo {
         color: #fff;
         font-size: 20px; }
-    
+
+
+/**************************************************************************/
+
+
