--- a/src/views/partials/_navbar.hbs
+++ b/src/views/partials/_navbar.hbs
@@ -31,6 +31,12 @@
       width:120px;
     }
   }
+
+  @media (max-width:768px){
+    .container-nav{
+      padding: 0 0;
+    }
+  }
 @media (max-width:380px){
     .navbar img{
       width:100px;
