--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -139,7 +139,7 @@
   <div class="container-banner-contact2" id="contactanos">
     <div class="enroll-now p-3 shadow p-3 mb-5 bg-white d-flex flex-column flex-wrap justify-content-center">
       <h2 class="mb-2 text-center">Nuestro equipo es invaluable, pero aún no te tiene a ti ¡Forma parte de El Castillo!</h2>
-      <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">Unete</button>
+      <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">Únete</button>
     </div>
 
    <!-- Modal -->
