--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -200,5 +200,14 @@
     </div>
   </div>
 
-  
+  <!-- Scroll Indicator -->
+
+<div class="scroll-container" id="scroll-indicator">
+  <div class="indicator">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+  </div>
+</div>
 
