--- a/src/views/partials/_footer.hbs
+++ b/src/views/partials/_footer.hbs
@@ -1,4 +1,4 @@
- <footer class="footer-32892 pb-5">
+ <footer class="footer-32892 pb-5" id="footer">
   <div class="site-section">
     <div class="container">
 
