scroll indicator fix mobile hover

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -499,6 +499,9 @@ body{
     bottom: 20px;
     right: 20px;
   }
+  .scroll-container:hover{
+    background: transparent;
+  }
 }
 .indicator{
   position:relative;
